# vk_graphics_rt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clone_dependencies.bat  run_slicer.sh
cmake/: CompilerWarnings.cmake
resources/shaders/: common.h  my_quad.frag  my_quad.frag.spv  simple.frag.spv
src/loader_utils/: gltf_utils.h  hydraxml.h  image_loader.cpp
src/render/: VulkanRTX.cpp  VulkanRTX.h  render_common.h  scene_mgr.cpp  scene_mgr.h  scene_mgr_BAK.h  scene_mgr_loaders.cpp
src/samples/raytracing/: CMakeLists.txt  main.cpp  raytracing.cpp  raytracing.h  raytracing_generated.cpp  raytracing_generated.h  raytracing_generated_ds.cpp  raytracing_generated_init.cpp  simple_render.cpp  simple_render.h  simple_render_rt.cpp
src/samples/raytracing/include/: RayTracer_ubo.h
src/samples/raytracing/shaders_generated/: CastSingleRayMega.comp  CastSingleRayMega.comp.spv  build.sh  common_generated.h
src/utils/: Camera.h
